backend/vulnerability_analysis/testing/iof1/segments/klee-out-0/test000001.user.err
Error: Wrong size given to klee_make_symbolic
File: testing/int_overflow3/segments/segment_1_klee.c
Line: 21
assembly.ll line: 7906
State: 1
Stack: 
	#000007906 in __klee_posix_wrapped_main() at testing/int_overflow3/segments/segment_1_klee.c:21
	#100006074 in __user_main(1, 140561256284160, 140561256284176) at src/runtime/POSIX/klee_init_env.c:245
	#200000528 in __uClibc_main(140545477312512, 1, 140561256284160, 0, 0, 0, 0) at libc/misc/internals/__uClibc_main.c:401
	#300000693 in main(1, 140561256284160)
